--- a/challenges/medium/53_casual_attention/challenge.html
+++ b/challenges/medium/53_casual_attention/challenge.html
@@ -1,7 +1,7 @@
 <p> Implement Causal (masked) Self-Attention for a given set of matrices. 
   Given the query matrix <code>Q</code> of size <code>M×d</code>, key matrix <code>K</code> of size <code>M×d</code>, and value matrix
   <code>V</code> of size <code>M×d</code>, your program should compute the output matrix using the formula:
-  $$\text{Attention}_{\text{causal}}(Q, K, V) = \text{masked}\Bigl(\text{softmax}\Bigl( \frac{QK^T}{\sqrt{d}} \Bigr)\Bigr)V$$  
+  $$\text{Attention}_{\text{causal}}(Q, K, V) = \text{softmax}\Bigl(\text{masked}\Bigl( \frac{QK^T}{\sqrt{d}} \Bigr)\Bigr)V$$  
 </p>
 
 
@@ -10,10 +10,11 @@
   $$$$
   i.e., for query <code>i</code> and key <code>j</code>:
   $$
-    \text{mask}_{ij} = \begin{cases}
-      1, & j \le i \\
-      -\infty, & j > i
-    \end{cases}
+  \text{masked}(a_{ij}) =
+  \begin{cases}
+  a_{ij}, & j \le i \\
+  -\infty, & j > i
+  \end{cases}
   $$
   The softmax function is applied row-wise. <code>Q</code>, <code>K</code>, <code>V</code>, and <code>output</code> are all of data type <code>float32</code>; 
   <code>M</code>, and <code>d</code> are of data type <code>int32</code>.
